css/style.scss
---
---

//
// IMPORTS
//

@import "variables";

html {
  position: relative;
  min-height: 100%;
}
body {
  //min-height: 1000px;
  width: 100%;
  padding-top: 70px;
  color: #111;
   /*Margin bottom by footer height */
  margin-bottom: 90px;
}
/*<<<<<< nav bar ***********************/
#topbar{
  width: 100%;
  position: fixed;
  top: 0px;
}
.navbar-static-top {
  margin-bottom: 19px;
}
/********************* nav bar >>>>>>>>>>>>*/


/* <<<<<<< search bar style *********/

div#search-div ul.typeahead.dropdown-menu li.active a{
  color: #000;
  background-color: #888;
  transition: all 0.5s;
}
div#search-div ul.typeahead.dropdown-menu li.active a:hover{
  color: #ff5050;
  background-color: #333;
  strong{
    color: red;
  }
  transition: all 0.5s;
}
div#search-div ul.typeahead.dropdown-menu li strong{
  color: #ff5050;
  transition: all 0.5s;
}

#search-text:hover,#search-text:focus{
	box-shadow: 0 0 3px #ddd;
	border: 1px #ff5050 solid;
  transition: all 0.5s;
}
div#search-div.input-group.search-tool{
  padding-bottom: 5px;
}

div#search-div span.input-group-btn button.btn#search-btn:hover{
    color: #ff5050;
}

/*********** search bar style >>>>>>>>>*/


/*<<<<<<<<<<<< blog post style ***************/

div.posts div.blog-post {
   .blog-post-title{
     letter-spacing: 1px;
     color: #222; /*#4183C4*/
  }
  a:hover, a:active {
    color: #ff6060;
    text-decoration: none;
  }
  position: relative;
  margin: 15px 0 25px 0px;
  padding-left: 10px;
  padding-bottom: 6px;
  background-color: #eee;
  border-radius: 6px;
  border-left: 4px #222 solid;/*3px #ff5050 solid;*/
  -webkit-transition: all 0.5s; /* For Safari 3.1 to 6.0 */
  transition: all 0.5s;
}

div.posts div.blog-post::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #222;//#fafcfc;rgba(0, 0, 0, 0.8);
  border-top-right-radius: 5px;//
  border-bottom-right-radius: 5px;//
  -webkit-transition: -webkit-transform .5s;
  transition: transform .5s;
  -webkit-transform: scale3d(.8, 0, 1);
  transform: scale3d(.8, 0, 1);
  -webkit-transform-origin: 50% 64.8px;
  -ms-transform-origin: 50% 64.8px;
  transform-origin: 50% 64.8px
}

div.posts div.body_post_hover {
    .blog-post-title{
    	color: #bbb;
    }
    .blog-post-title:hover, .blog-post-title:active {
      color: #ff6060;
      text-decoration: none;
    }
    background-color: rgba(55, 55, 55, 0.5);
    color: white;
    margin-left: -15px;
    margin-right: 15px;
    border-left: 8px #ff5050 solid;
    -webkit-transition: all 0.5s;//0.5s;
    transition: all 0.5s;//0.5s
}

div.posts div.body_post_hover::before {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1)
}

.blog-post-title{
	padding-top: 10px;
}

.read-more{
	margin-right: 20px;
}

.span-blank-before::before{
	padding-right: 0px;
}

/****************************blog post style >>>>>>>>>*/

/*<<<<<<<<<< list group style *****************/
.list-group-item-gray{
	background: #444;
	color: #ddd;
  border: 1px #ddd solid;
}

ul.list-group li.dropdown a.list-group-item
{
  border-radius: 0;
}

ul#categories-ul.list-group li.dropdown:last-child
{
  a.dropdown-toggle.list-group-item{
    border-radius: 0 0 4px 4px;
  }
}


a.list-group-item:hover{
	color:#ff6060;
  /*background: #222;*/
	font-weight: bolder;
	transition: 0.5s ease-in-out;
}
a.list-group-item .badge{
  -webkit-transition: 0.5s; /* For Safari 3.1 to 6.0 */
   transition: transform 0.5s;
}
a.list-group-item:hover .badge { background: #ff2020;transform: scale(1.1) rotate(360deg); transition: 0.5s ease-in-out;}

/************************** list group style >>>>>>>>*/


/*<<<<<<<<<<< paginator style ***********/
div.paginator-wrap {
  text-align: center;
  color: #222;
  margin-bottom: 85px;
}
div.paginator-wrap{
  ul.pagination{
    li.active a{
      color: #eee;
      font-weight: 400;
      border: 1px #ddd solid;
      background-color: #222;
    }
    li a{
      color: #222;
    }
    li a:hover{
      color:#ff5050;
    }
  }
}

/************ paginator style >>>>>>>>>>>*/


/*<<<<<<<<< related post style *********/

div.related-wrap{
  font-size: 1.5em;
  padding-top: 40px;
}
div.related-body{
  .span-link a{
    background-color: #444;
    display: inline;
    font-weight: lighter;
  }
  background-color: #eee;
  border-left: 3px #222 solid;
  padding-left: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  padding-right: 1em;
  -webkit-transition: all 1s; /* For Safari 3.1 to 6.0 */
  transition: all 1s;
}
div.related-body:hover{
  border-left: 6px #ff5050 solid;
  transform: translate(-30px,0px);
  -ms-transform: translate(-30px,0px);
  -webkit-transform:translate(-30px,0px);
  border-radius: 5px 5px 5px 5px;
  -webkit-transition: all 1s; /* For Safari 3.1 to 6.0 */
  transition: all 1s;
}

/*********** related post style >>>>>>>>>>*/


/*<<<<<<<<<<<< comment style *************/
div.comments-wrap{
  margin-top: 120px;
  margin-bottom: 90px;
  //padding-bottom: 70px;
}

/************* comment style >>>>>>>>>>>>*/

/*<<<<<<<<<<< footer style *****************/


.footer-container {
  width: auto;
  max-width: 100%;
}
.footer-container .text-muted {
  padding-top: 10px;
  text-align: center;
  color: #eee;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 85px;

  background-color: #444;
}

/************* footer style >>>>>>>>>>>>>*/

/*<<<<<<<< go to top style **************/
#go-to-top {
    text-align: center;
    font-size: 24px;
    font-weight: 200;
    z-index: 1000;
    display: none;
    position: fixed;
    bottom: 15%;
    right: 20px;
    width: 36px;
    height: 36px;
    border-radius: 3px;
    background-color: #888;
    color: white;
    opacity: 0.4;
    filter: alpha(opacity=40); /* For IE8 and earlier */
    transition: all 0.5s;
}
#go-to-top:hover {
    opacity: 0.8;
    color: #ff4040;
    //border-radius: 5px;
    background-color: #222;
    filter: alpha(opacity=80); /* For IE8 and earlier */
    transform: scale(1.2,1.2);
    transition: all 0.5s;
}
/********* go to top style >>>>>>>>>>>>>*/

/*<<<<<<<< Categories page style ********/
a.cate-label{
  background: #666;
  color: white;
  display: inline-block;
  margin-left: 6px;
  margin-right: 0px;
  padding-left: 4px;
  padding-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  //transition: all 0s;
}
a.cate-label:hover{
  background-color: #666;
  border-radius: 2px 0px 0px 2px;
  margin-left: 1px;
  margin-right: 1px;
  border-left: 4px #ff5050 solid;
  transition: all 0.2s;
}
ul.cate-ul{
  padding-left: 1.5em;
}
ul.cate-ul a.cate-title{
  font-size: 1.2em;
  padding-left: 4px;
  padding-right: 4px;
  margin-right: 4px;
  margin-left: 4px;
  border-radius: 4px 4px 4px 4px;
  transition: all 0.5s;
}
ul.cate-ul li{
  list-style: none;
}

ul.cate-ul a.cate-title:hover{
  //background-color: #222;
  margin-left: -10px;
  //transform: translate(-10,0);
  transition: all 0.5s;
}

span.cate-post-date{
  color: #999;
  font-style: italic;
  font-size: 0.88em;
  font-weight: 600;
  margin-left: 10px;
}

/********* Categories page style >>>>>>>*/

/*<<<<<<<<<<< Tags page style *************/
a.tags-label{
  background: #666;
  color: white;
  display: inline-block;
  margin-left: 8px;
  margin-right: 0px;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 4px 4px 4px 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  //transition: all 0s;
}
a.tags-label:hover{
  background-color: #666;
  border-radius: 2px 4px 4px 2px;
  margin-left: 3px;
  margin-right: 1px;
  border-left: 4px #ff5050 solid;
  transition: all 0.2s;
}
/************ Tags page style >>>>>>>>>>>>*/


/*<<<<<<<<<<<< others style **************/
span.span-link a{
  font-size: 0.9em;
  color: #fff;
  border-radius: .25em;
  background-color: #777;
  padding-left: 2px;
  padding-right: 2px;
  margin-top: 2px;
  margin-bottom: 2px;

}
span.span-link a:hover{
  color:#ff5050;
  text-decoration: none;
}

a{
  color: #555;
}
a:hover{
  color:#ff5050;
  text-decoration: none;
}
a.label.label-default.label-link:hover{
  color: #ff5050;
}
.blog-sidebar .row {
  margin-left: 0px;
}

/********** others style >>>>>>>>>>>>*/

@import "highlights";
@import "svg-icons";

